--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,5 +67,10 @@
     }
   },
   "simplecov-vscode.path": "Library/Homebrew/test/coverage/.resultset.json",
-  "simplecov-vscode.enabled": false
+  "simplecov-vscode.enabled": false,
+  "github-actions.workflows.pinned.workflows": [
+    ".github/workflows/actionlint.yml",
+    ".github/workflows/tests.yml",
+    ".github/workflows/codacy.yml"
+  ]
 }
